--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .login{
     width: 320px;
-    height: 420px;
+    height: 440px;
     top: 50%;
     left: 50%;
     padding: 70px 30px;
@@ -62,7 +62,7 @@ h1 {
 }
 
 .btn{
-    height: 40px;
+    height: 38px;
     background: #fb2525;
     color: #fff;
     font-size: 18px;
@@ -103,4 +103,15 @@ h1 {
 
 .register-link p a:hover{
     text-decoration: underline;
+}
+
+.login .input-group input{
+    height: 35px;
+    width: 260px;
+    padding: 0 20px;
+    box-sizing: border-box;
+    font-size: 10px;
+    border: 3px solid black;
+    border-radius: 10px;
+background-color: black;
 }
