--- a/main.css
+++ b/main.css
@@ -1,420 +1,49 @@
-*{
+/* Gaya untuk header */
+header {
+    background-color: #333; /* Warna latar belakang header */
+    color: #fff; /* Warna teks header */
+    text-align: center;
+    padding: 20px 0;
+  }
+  
+  header h1 {
+    font-size: 28px;
+    font-weight: bold;
     margin: 0;
-    padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
-}
-
-.main{
-    width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-}
-
-.navbar{
-    width: 1200px;
-    height: 75px;
-    margin: auto;
-}
-
-.icon{
-    width: 200px;
-    float: left;
-    height: 70px;
-}
-
-.logo{
-    color: #ff7200;
-    font-size: 35px;
-    font-family: Arial;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-    margin-top: 5px
-}
-
-.menu{
-    width: 400px;
-    float: left;
-    height: 70px;
-}
-
-ul{
-    float: left;
+  }
+  
+  /* Gaya untuk maincontainer */
+  .maincontainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
-}
-
-ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-}
-
-ul li a:hover{
-    color: #ff7200;
-}
-
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-}
-
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.btn{
-    width: 100px;
-    height: 40px;
-    background: #ff7200;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    transition: 0.2s ease;
-    cursor: pointer;
-}
-.btn:hover{
-    color: #000;
-}
-
-.btn:focus{
-    outline: none;
-}
-
-.srch:focus{
-    outline: none;
-}
-
-.content{
-    width: 1200px;
-    height: auto;
-    margin: auto;
-    color: #fff;
-    position: relative;
-}
-
-.content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-}
-
-.content h1{
-    font-family: 'Times New Roman';
+    flex-direction: column;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .maincontainer h1{
+    text-align: center;
     font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-}
-
-.content .cn{
-    width: 160px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: .4s ease;
-    
-}
-
-.content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
-}
-
-.cn:hover{
-    background-color: #fff;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 65px
-}
-
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    transform: translate(0%,-5%);
-    border-radius: 10px;
-    padding: 25px;
-}
-
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
+  }
+  /* Gaya untuk gambar */
+  .center-image {
     text-align: center;
-    color: #ff7200;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-}
-
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-
-.form input:focus{
-    outline: none;
-}
-
-::placeholder{
-    color: #fff;
-    font-family: Arial;
-}
-
-.btnn{
-    width: 240px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
-}
-.btnn:hover{
-    background: #fff;
-    color: #ff7200;
-}
-.btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
-}
-.form .link a{
-    text-decoration: none;
-    color: #ff7200;
-}
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
-}
-
-body{
-    background:#5C717F;
-}
-.direction{
-    text-align: center;
-}
-.direction button{
-    font-family: cursive;
-    font-weight: bold;
-    background-color: #ffffff44;
-    border:none;
-    width:50px;
-    height:50px;
-    border-radius: 50%;
-    transition: 0.5s;
-    margin:0 10px;
-}
-.direction button:hover{
-    background-color: #ffffff;
-}
-.item{
-    border-radius: 15px;
-    width:300px;
-    height:500px;
-    background-image: linear-gradient(to top, #AEC0CE, #ECECF2);
-    overflow: hidden;
-    transition: 0.5s;
-    margin:10px;
-    scroll-snap-align: start;
-}
-.item .avatar{
+  }
+  
+  .center-image img {
     display: block;
-    margin:50px auto 10px;
-    width:100px;
-    height:150px;
-    object-fit: cover;
-    border-radius: 20px;
-    box-shadow: 0 10px 15px #7e878d;
-}
-.item .content{
-    padding:30px;
-    font-family: monospace;
-}
-.item .content table td{
-    padding:10px 0;
-    border-bottom: 1px solid #AEC0CE;
-}
-.item .content table td:nth-child(2){
-    text-align: right;
-}
-.item .nameGroup{
-    text-align: center;
-    border-bottom:none!important;
-}
-#list{
-    display: flex;
-    width:max-content;
-}
-#formList{
-    width:1280px;
+    margin: 0 auto;
     max-width: 100%;
-    overflow: auto;
-    margin:100px auto 50px;
-    scroll-behavior: smooth;
-    scroll-snap-type: both;
-}
-#formList::-webkit-scrollbar{
-    display: none;
-}
-@media screen and (max-width: 1024px){
-    .item{
-        width: calc(33.3vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
-@media screen and (max-width: 768px){
-    .item{
-        width: calc(50vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
+    height: auto;
+    border: 1px solid #ccc; /* Jika Anda ingin menambahkan garis tepi pada gambar */
+    padding: 10px;
+  }
   
-  
-
-/* On smaller screens, decrease text size */
-@media screen and (max-width:1200px) {
-    /*Normal Screen*/
-
-    .navbar{
-        width: 100%;
-        height: 100px;
-    }
-    ul{
-        margin-left: 30px;
-    }   
-    ul li{
-        margin-left: 60px;
-    }
-    ul li a{
-       font-size: 1.6vw; 
-    }
-    .search{
-        margin-top: 3px;
-        margin-left: 290px;
-    }
-    .srch{
-        height: 40px;
-        width: 190px;
-        font-size: 14px;
-    }
-    .btn{
-        height:40px;
-        width: 80px;
-    }
-    .content{
-        width: 100%;
-    }
-    .content h1, .content span{
-        font-size: 4.5vw; 
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.5vw;
-    }
-    .content .cn{
-        width: 13%;
-        height: 3.5vw;
-        font-size: 1.8vw;
-    }
-    .content a{
-        font-size: 1.6vw
-    }
-}
-/* Footer */
-
-.footer {
-    background-color: #ffffff1a;
-    box-shadow: 0px 16px 34px #00000040;
-    width: 100%;
-    height: 100%;
+  /* Gaya untuk footer */
+  footer {
+    background-color: #333; /* Warna latar belakang footer */
+    color: #fff; /* Warna teks footer */
     text-align: center;
-    padding: 40px 0;
-    margin-top: 50px;
-    bottom: 20; 
-    left: 0
+    padding: 10px 0;
+  }
+  
 
-}
-
-.footer h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.footer p {
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-
-.footer img {
-    width: 24px;
-    height: 24px;
-    margin: 0 10px;
-}
