--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-    background-image: url("background.jpg");
+    background-image: url("img/background.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -98,7 +98,7 @@ h1 {
     font-size: 15px;
     color: #fff;
     text-decoration: none;
-    font font-weight: 600;
+    font-weight: 600;
 }
 
 .register-link p a:hover{
@@ -113,5 +113,5 @@ h1 {
     font-size: 10px;
     border: 3px solid black;
     border-radius: 10px;
-background-color: black;
+    background-color: black;
 }
