--- a/main.css
+++ b/main.css
@@ -1,488 +1,242 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
-}
-
-.main{
-    width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-}
-
+/* Gaya untuk header */
 .galaxy-header {
-    background-color:#233954;
-    background-size: cover;
-    color: white;
-    padding: 10px 0;
-    text-align: center;
-    position: sticky;
-    top: 0;
+  background-color:#233954;
+  background-size: cover;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
+  position: sticky;
+  top: 0;
 }
 
 .header-content {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 10px;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  padding: 10px;
 }
 
 .left-section {
-    display: flex; 
-    align-items: center;
-    margin-left: 50px;
+  display: flex; 
+  align-items: center;
+  margin-left: 50px;
 }
 
 /* Logo styles */
 .logo img {
-    max-width: 90px; 
-    height: auto;
+  max-width: 90px; 
+  height: auto;
 }
 
 .navbar-phone{
-    display: none;
+  display: none;
 }
 
 
 .navbar ul {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .navbar li {
-    margin-right: 50px;
-    transition: transform 0.2s ease-in-out; 
+  margin-right: 50px;
+  transition: transform 0.2s ease-in-out; 
 }
 
 .navbar a {
-	padding: 10px 5px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-    transition: color 0.2s ease-in-out; 
+padding: 10px 5px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  transition: color 0.2s ease-in-out; 
 }
 
 .navbar a:hover {
-    color: #f7941d; 
+  color: #f7941d; 
 }
 
 .sign-in-button {
-    background-color: transparent;
-	font-weight: bold;
-    color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    margin-right: 30px;
+  background-color: transparent;
+font-weight: bold;
+  color: white;
+  border: 1px solid white;
+  border-radius: 25px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  margin-right: 30px;
 }
 
 .sign-in-button:hover {
-    background-color:#f7941d;
-	border: none;
-    color:black; /* Change color on hover */
+  background-color:#f7941d;
+border: none;
+  color:black; /* Change color on hover */
 }
 
 .category-menu{
-	position: relative;
-  	display: inline-block;
+position: relative;
+  display: inline-block;
 }
 
 .menu-icon {
-    font-size: 15px;
-	transition: color 0.2s ease-in-out; 
-    margin-left: 5px; 
+  font-size: 15px;
+transition: color 0.2s ease-in-out; 
+  margin-left: 5px; 
 }
 
 .dropdown-content {
-	margin-top: 5px;
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-  }
-  
-.dropdown-content a {
-	color: black;
-	text-align: left;
-	font-size: 11px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
+margin-top: 5px;
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
 }
-  
+
+.dropdown-content a {
+color: black;
+text-align: left;
+font-size: 11px;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
 .dropdown-content a:hover {
-	background-color:#f7941d;
-	color: white;
+background-color:#f7941d;
+color: white;
 }
 
 .category-menu:hover .dropdown-content {
-	display: block;
+display: block;
 }
 
 .category-menu:hover{
-	color:#f7941d;
-}
-.btn:focus{
-    outline: none;
+color:#f7941d;
 }
 
-.srch:focus{
-    outline: none;
-}
-
-.content{
-    width: 1200px;
-    height: auto;
-    margin: auto;
-    color: #fff;
-    position: relative;
-}
-
-.content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-}
-
-.content h1{
-    font-family: 'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-}
-
-.content .cn{
-    width: 160px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: .4s ease;
-    
-}
-
-.content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
-}
-
-.cn:hover{
-    background-color: #fff;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 65px
-}
-
-.form{
-    width: 250px;
-    height: 380px;
-    background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: absolute;
-    top: -20px;
-    left: 870px;
-    transform: translate(0%,-5%);
-    border-radius: 10px;
-    padding: 25px;
-}
-
-.form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #ff7200;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-}
-
-.form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
-}
-
-.form input:focus{
-    outline: none;
-}
-
-::placeholder{
-    color: #fff;
-    font-family: Arial;
-}
-
-.btnn{
-    width: 240px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
-}
-.btnn:hover{
-    background: #fff;
-    color: #ff7200;
-}
-.btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-.form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
-}
-.form .link a{
-    text-decoration: none;
-    color: #ff7200;
-}
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
-}
-
-body{
-    background:#5C717F;
-}
-.direction{
-    text-align: center;
-}
-.direction button{
-    font-family: cursive;
-    font-weight: bold;
-    background-color: #ffffff44;
-    border:none;
-    width:50px;
-    height:50px;
-    border-radius: 50%;
-    transition: 0.5s;
-    margin:0 10px;
-}
-.direction button:hover{
-    background-color: #ffffff;
-}
-.item{
-    border-radius: 15px;
-    width:300px;
-    height:500px;
-    background-image: linear-gradient(to top, #AEC0CE, #ECECF2);
-    overflow: hidden;
-    transition: 0.5s;
-    margin:10px;
-    scroll-snap-align: start;
-}
-.item .avatar{
-    display: block;
-    margin:50px auto 10px;
-    width:100px;
-    height:150px;
-    object-fit: cover;
-    border-radius: 20px;
-    box-shadow: 0 10px 15px #7e878d;
-}
-.item .content{
-    padding:30px;
-    font-family: monospace;
-}
-.item .content table td{
-    padding:10px 0;
-    border-bottom: 1px solid #AEC0CE;
-}
-.item .content table td:nth-child(2){
-    text-align: right;
-}
-.item .nameGroup{
-    text-align: center;
-    border-bottom:none!important;
-}
-#list{
-    display: flex;
-    width:max-content;
-}
-#formList{
-    width:1280px;
-    max-width: 100%;
-    overflow: auto;
-    margin:100px auto 50px;
-    scroll-behavior: smooth;
-    scroll-snap-type: both;
-}
-#formList::-webkit-scrollbar{
-    display: none;
-}
-@media screen and (max-width: 1024px){
-    .item{
-        width: calc(33.3vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
-@media screen and (max-width: 768px){
-    .item{
-        width: calc(50vw - 20px);
-    }
-    .direction{
-        display: none;
-    }
-}
-  
-  
-
-/* On smaller screens, decrease text size */
-@media screen and (max-width:1200px) {
-    /*Normal Screen*/
-
-    .navbar{
-        width: 100%;
-        height: 100px;
-    }
-    ul{
-        margin-left: 30px;
-    }   
-    ul li{
-        margin-left: 60px;
-    }
-    ul li a{
-       font-size: 1.6vw; 
-    }
-    .search{
-        margin-top: 3px;
-        margin-left: 290px;
-    }
-    .srch{
-        height: 40px;
-        width: 190px;
-        font-size: 14px;
-    }
-    .btn{
-        height:40px;
-        width: 80px;
-    }
-    .content{
-        width: 100%;
-    }
-    .content h1, .content span{
-        font-size: 4.5vw; 
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.5vw;
-    }
-    .content .cn{
-        width: 13%;
-        height: 3.5vw;
-        font-size: 1.8vw;
-    }
-    .content a{
-        font-size: 1.6vw
-    }
-}
-/* Footer */
 
 footer{
-    margin-top: 50px;
- }
+  margin-top: 50px;
+}
 .footer-first {
-	display: flex;
-  	flex-wrap: wrap;
-	justify-content: center;
-  	align-content: flex-start;
-	background-color:#233954;
-	color: #fff;
-    padding: 30px 0;
-    width: 100%;
-  }
-  
-  
-  .footer-column {
-	margin: 0 100px;
-  }
-  
-  .galaxy-footer h3 {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color:#f7941d;
-  }
-  
-  .galaxy-footer ul {
-	list-style-type: none;
-	padding: 0;
-  }
-  
-  .galaxy-footer ul li {
-	margin-bottom: 8px;
+display: flex;
+  flex-wrap: wrap;
+justify-content: center;
+  align-content: flex-start;
+background-color:#233954;
+color: #fff;
+  padding: 30px 0;
+  width: 100%;
+}
+
+
+.footer-column {
+margin: 0 100px;
+}
+
+.galaxy-footer h3 {
+font-size: 18px;
+margin-bottom: 10px;
+color:#f7941d;
+}
+
+.galaxy-footer ul {
+list-style-type: none;
+padding: 0;
+}
+
+.galaxy-footer ul li {
+margin-bottom: 8px;
+}
+
+ul li a{
+font-size: 14px;
+}
+
+.galaxy-footer ul li a {
+text-decoration: none;
+color: #fff;
+transition: color 0.3s ease;
+}
+
+.galaxy-footer ul li a:hover {
+color:#aeb3ba; /* Change color on hover */
+}
+
+.social-icons {
+display: flex;
+list-style-type: none;
+padding: 0;
+margin-top: 10px;
+}
+
+.social-icons li {
+margin-right: 10px;
+}
+
+.social-icons a {
+text-decoration: none;
+color: #fff;
+font-size: 24px;
+transition: color 0.3s ease;
+}
+
+.footer-second{
+text-align: center;
+background-color:#0f1823;
+color: #fff;
+padding: 30px;
+}
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .left-section{
+      margin-left: 0;
   }
 
-  ul li a{
-	font-size: 14px;
-  }
-  
-  .galaxy-footer ul li a {
-	text-decoration: none;
-	color: #fff;
-	transition: color 0.3s ease;
-  }
-  
-  .galaxy-footer ul li a:hover {
-	color:#aeb3ba; /* Change color on hover */
-  }
-  
-  .social-icons {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin-top: 10px;
-  }
-  
-  .social-icons li {
-	margin-right: 10px;
-  }
-  
-  .social-icons a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 24px;
-	transition: color 0.3s ease;
+  .logo img {
+      max-width: 60px; 
+      height: auto;
   }
 
-  .footer-second{
-	text-align: center;
-	background-color:#0f1823;
-	color: #fff;
-	padding: 30px;
+}
+  
+  header h1 {
+    font-size: 28px;
+    font-weight: bold;
+    margin: 0;
   }
+  
+  /* Gaya untuk maincontainer */
+  .maincontainer {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .maincontainer h1{
+    text-align: center;
+    font-size: 50px;
+  }
+  /* Gaya untuk gambar */
+  .center-image {
+    text-align: center;
+  }
+  
+  .center-image img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #ccc; /* Jika Anda ingin menambahkan garis tepi pada gambar */
+    padding: 10px;
+  }
+  
+  /* Gaya untuk footer */
+ 
+
